--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>
-        Sveiks
+    <h1 class="heading">
+        Virsraksts
     </h1>
     <p>
         Teksts
